<resources>
    <string name="app_name">Thundercloud</string>

    <string name="access_token">auth_token</string>
    <string name="refresh_token">refresh_token</string>

    <!-- Common -->
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="finish">Finish</string>

    <!-- Main Activity -->
    <string name="title_activity_main">Thundercloud</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Your Music -->
    <string name="title_activity_music_pager">Your Music</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="playlist">Playlist</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="user_id">userId</string>
    <string name="expires">expires</string>
    <string name="items">items</string>
    <plurals name="songs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <!-- First Time Setup -->
    <string name="title_activity_first_time_setup">FirstTimeSetupActivity</string>

    <!-- Speaker Pairing -->
    <string name="title_activity_speaker_pairing">Select a speaker</string>

    <string name="connect_bluetooth_title">Connect Bluetooth</string>
    <string name="connect_bluetooth_instructions">Tap the Bluetooth icon below to begin the speaker setup process.</string>

    <string name="speaker_search_title">Select a Speaker</string>
    <string name="speaker_search_instructions">Select the speaker you would like to connect with your phone</string>
    <string name="speaker_search_no_speakers_found">Hmm… no speakers were found nearby. Be sure the speaker is on and near your phone. You should see a blue light on the speaker.</string>


    <!-- Wifi Setup -->
    <string name="title_activity_speaker_wifi">SpeakerWifiActivity</string>
    <string name="wifi_list_title">Connect to Wi-Fi</string>
    <string name="wifi_list_instructions">Add %1$s to a Wi-Fi network.</string>
    <string name="wifi_list_instructions_first_time">Great! Now add %1$s to a Wi-Fi network.</string>
    <string name="wifi_list_searching">Searching for available networks&#8230;</string>
    <string name="wifi_list_no_networks_found">Hmm…no Wi-Fi networks were found nearby. You can still listen to your music using Bluetooth for now.</string>
    <string name="wifi_list_skip">Skip Wi-Fi setup for now</string>
    <string name="wifi_list_skip_reminder">You can add a wireless network later in Settings.</string>
    <string name="wifi_list_prompt_title">%1$s</string>

    <string name="wifi_connect_title">Set up %1$s</string>
    <string name="wifi_connect_connecting">Connecting to "%1$s"&#8230;</string>

    <string name="wifi_success_title">Set up %1$s</string>
    <string name="wifi_success_instructions">We\'re in! Let\'s get those tunes going!</string>
    <string name="wifi_success_add_music">Add your music</string>
    <string name="wifi_success_skip_music">Skip for now</string>

    <!--  Music Service Setup -->
    <string name="title_activity_music_service_setup">MusicServiceSetupActivity</string>
    <string name="music_setup_title">Set up %1$s</string>
    <string name="music_setup_instructions">Select your music source</string>
    <string name="music_setup_more_apps_coming">More apps coming soon …</string>
    <string name="music_setup_skip">Skip for now</string>

    <!-- Content Descriptions -->
    <string name="description_connect_bluetooth_button">Connect bluetooth</string>
    <string name="description_no_speakers_found">No speakers found</string>
    <string name="description_no_wifi_found">No networks found</string>
    <string name="description_wifi_strength">Wifi strength</string>
    <string name="description_wifi_info">Wifi info</string>
    <string name="description_boombotix_logo">Boombotix logo</string>
    <string name="description_music_service_logo">Logo</string>
    <string name="description_music_row_menu">Options</string>
    <string name="description_music_row_art">Art</string>
    <string name="description_now_playing_mute">Mute</string>
    <string name="description_now_playing_full_volume">Full Volume</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voice_search_result_waiting">Go head&#8230; I\'m listening</string>
    <string name="voice_search_result_tap_to_edit">Tap to edit</string>
    <string name="search_row_header_playlists">Playlists</string>
    <string name="search_row_header_tracks">Tracks</string>
    <string name="search_row_header_artists">Artists</string>
    <string name="search_row_header_album">Album</string>
    <string name="row_search_track_delimiter">|</string>
    <string name="now_playing">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="action_search">Search</string>
    <string name="artist">Artist</string>
    <string name="track_name">Track Name</string>
    <string name="queue">Queue</string>
    <string name="search">Search</string>

    <string-array name="spotify_scopes">
        <item>streaming</item>
        <item>user-library-read</item>
        <item>user-read-private</item>
        <item>user-follow-read</item>
        <item>playlist-modify-public</item>
        <item>user-library-modify</item>
        <item>user-follow-modify</item>
    </string-array>

</resources>
