<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/default_margin"
    android:layout_marginLeft="@dimen/default_margin"
    android:layout_marginRight="@dimen/default_margin"
    android:layout_marginStart="@dimen/default_margin"
    android:layout_marginTop="@dimen/default_margin_2x"
    android:orientation="vertical"
    tools:context="boombotix.com.thundercloud.ui.fragment.wifi.WifiSuccessFragment">

    <TextView
        android:id="@+id/instructions"
        style="@style/TextAppearance.Thundercloud.Title.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_success_instructions" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:contentDescription="@string/boombotix_logo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/add_music"
        style="@style/Thundercloud.Button.Active"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/wifi_success_add_music" />

    <TextView
        android:id="@+id/skip_music"
        style="@style/TextAppearance.Thundercloud.Body.Accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/default_margin_3x"
        android:text="@string/wifi_success_skip_music" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:contentDescription="@string/boombotix_logo_description"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal" />

</LinearLayout>